<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_turtle_commands</name>
  <version>0.0.0</version>
  <description>Module 3 Task 2</description>
  <maintainer email="d.belyakova1@g.nsu.ru">belyakovaDep</maintainer>
  <license>Apache-2.0 license</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>message_turtle_commands</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
